# sqs-workers

./: .isort.cfg  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements_test.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pre-commit-detect-outdated.yml  pre-commit-update-hooks.yml  pre-commit.yml  publish.yml  tests.yml
sqs_workers/: __init__.py  __version__.py  async_task.py  backoff_policies.py  batching.py  codecs.py  config.py  context.py  core.py  deadletter_queue.py  exceptions.py  memory_env.py  memory_sqs.py  processor_mgr.py  processors.py  queue.py  shutdown_policies.py  sqs_env.py  sqs_manage.py  utils.py
tests/: conftest.py  test_codecs.py  test_config.py  test_context.py  test_proxy.py  test_raw_connector.py  test_shutdown_policies.py  test_sqs.py  test_utils.py
