[tool.poetry]
name = "sqs-workers"
version = "0.5.22"
description = "An opinionated queue processor for Amazon SQS"
authors = ["Doist Developers <dev@doist.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/Doist/sqs-workers"
readme = "README.md"
exclude = ['tests/']

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
boto3 = "^1.27.33"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"
pytest = "^8.3.5"
pytest-runner = "^6.0.1"
localstack-client = "^2.10"
pre-commit = "^4.2.0"
mypy = "1.15"
ruff = "^0.11.5"
typing-extensions = "^4.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["env", "runtime"]

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "D",     # pydocstyle,
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "W",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PL",    # pylint
  "RUF",   # ruff
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
]

ignore = [
  ## D - pydocstyle ##
  # D1XX errors are OK. Don't force people into over-documenting.
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  # These need to be fixed.
  "D205",
  "D400",
  "D401",

  ## E / W - pycodestyle ##
  "E501", # line too long

  # ## PL - pylint ##
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "PLW0603", # global-statement

  "S101", # assert
  "S301", # suspicious-pickle-usage
  "S311", # suspicious-non-cryptographic-random-usage
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
