[tool.poetry]
name = "sqs-workers"
version = "0.5.22"
description = "An opinionated queue processor for Amazon SQS"
authors = ["Doist Developers <dev@doist.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/Doist/sqs-workers"
readme = "README.md"
exclude = ['tests/']

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
boto3 = "^1.27.33"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"
pytest = "^8.3.5"
pytest-runner = "^6.0.1"
localstack-client = "^2.10"
pre-commit = "^4.2.0"
mypy = "1.15"
ruff = "^0.11.5"
typing-extensions = "^4.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["env", "runtime"]

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "D",     # pydocstyle,
  "DTZ",   # flake8-datetimez,
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "PL",    # pylint
  "RUF",   # ruff
  "S",     # flake8-bandit
  "T20",   # flake8-print
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
  "TC",    # flake8-type-checking
  "BLE",   # flake8-blind-except
  "FA",    # flake8-future-annotations
  "FIX",   # flake8-fixme
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "RET",   # flake8-logging-return
  "ISC",   # flake8-implicit-str-concat
  "INP",   # flake8-no-pep420
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "TID",   # flake8-tidy-imports
  "PTH",   # flake8-user-pathlib
  "PERF",  # perflint
  "FURB",  # refurb
  "PGH",   # pygrep-hooks
  "PYI",   # flake8-pyi
]

ignore = [
  ## D - pydocstyle ##
  # D1XX errors are OK. Don't force people into over-documenting.
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  # These need to be fixed.
  "D205",
  "D400",
  "D401",

  ## E / W - pycodestyle ##
  "E501", # line too long

  # ## PL - pylint ##
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "PLW0603", # global-statement

  "S101", # assert
  "S301", # suspicious-pickle-usage
  "S311", # suspicious-non-cryptographic-random-usage
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
